<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/buttonInspiration"
        android:layout_above="@id/view1"
        android:background="@drawable/underline"
        android:text="TOP 3"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        />

    <Button
        android:id="@+id/buttonInspiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inspiration"
        android:layout_marginLeft="20dp"
        />

    <View
        android:id="@+id/viewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextDescription"
        android:layout_below="@id/buttonInspiration"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        />


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_alignTop="@id/viewGroup"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_below="@+id/view1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_below="@+id/view2"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border"
        />



    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/view1"
        android:layout_alignBottom="@+id/view1"
        android:layout_alignLeft="@id/view1"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ironmike"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/view2"
        android:layout_alignBottom="@+id/view2"
        android:layout_alignLeft="@id/view2"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/neiltyson"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/view3"
        android:layout_alignBottom="@+id/view3"
        android:layout_alignLeft="@id/view3"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/tysonfury"
        />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEditDescription"
        android:hint="@string/editTextDescriptionHint"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/buttonEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup"
        android:hint="@string/editDescriptionButtonText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        >


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstPerson"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondPerson"
            />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/thirdPerson"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstPerson"
        android:layout_toRightOf="@id/imageView1"
        android:layout_alignTop="@id/view1"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/textViewName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondPerson"
        android:layout_toRightOf="@id/imageView2"
        android:layout_alignTop="@id/view2"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/textViewName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdPerson"
        android:layout_toRightOf="@id/imageView3"
        android:layout_alignTop="@id/view3"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/textViewAge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstPersonAge"
        android:layout_toRightOf="@id/imageView1"
        android:layout_below="@id/textViewName1"
        />

    <TextView
        android:id="@+id/textViewAge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondPersonAge"
        android:layout_toRightOf="@id/imageView2"
        android:layout_below="@id/textViewName2"
        />

    <TextView
        android:id="@+id/textViewAge3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdPersonAge"
        android:layout_toRightOf="@id/imageView3"
        android:layout_below="@id/textViewName3"
        />

    <TextView
        android:id="@+id/textViewDescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstPersonDescription"
        android:layout_toRightOf="@id/imageView1"
        android:layout_alignRight="@id/view1"
        android:layout_alignBottom="@id/view1"
        android:layout_below="@id/textViewAge1"
        android:textColor="@color/colorBlack"
        android:paddingRight="10dp"
        />

    <TextView
        android:id="@+id/textViewDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondPersonDescription"
        android:layout_toRightOf="@id/imageView2"

        android:layout_alignRight="@id/view2"
        android:layout_alignBottom="@id/view2"

        android:layout_below="@id/textViewAge2"
        android:textColor="@color/colorBlack"
        android:paddingRight="10dp"
        />

    <TextView
        android:id="@+id/textViewDescription3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdPersonDescription"
        android:layout_toRightOf="@id/imageView3"

        android:layout_alignRight="@id/view3"
        android:layout_alignBottom="@id/view3"
        android:layout_below="@id/textViewAge3"
        android:textColor="@color/colorBlack"
        android:paddingRight="10dp"
        />

</RelativeLayout>